--- a/README.Rmd
+++ b/README.Rmd
@@ -36,7 +36,7 @@ Or the development version from GitHub:
 
 ``` r
 # install.packages("devtools")
-devtools::install_github("EddieYang211/powerLATE")
+devtools::install_github("kbansak/powerLATE")
 ```
 
 ## Getting started
