--- a/README.Rmd
+++ b/README.Rmd
@@ -23,12 +23,9 @@ library("badger")
 ```{r, echo = FALSE, results='asis'}
 cat(badge_cran_release("powerLATE", "green"))
 ```
-[![Travis build status](https://travis-ci.com/kbansak/powerLATE.svg?branch=master)](https://travis-ci.com/kbansak/powerLATE)
-[![AppVeyor build status](https://ci.appveyor.com/api/projects/status/github/kbansak/powerLATE?branch=master&svg=true)](https://ci.appveyor.com/project/kbansak/powerLATE)
 [![Codecov test coverage](https://codecov.io/gh/kbansak/powerLATE/branch/master/graph/badge.svg)](https://codecov.io/gh/kbansak/powerLATE?branch=master)
-```{r, echo = FALSE, results='asis'}
 cat(badge_cran_download("powerLATE", "grand-total", "blue"))
-```
+[![R-CMD-check](https://github.com/kbansak/powerLATE/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/kbansak/powerLATE/actions/workflows/R-CMD-check.yaml)
 <!-- badges: end -->
 
 powerLATE implements the generalized power analysis for the local average treatment effect (LATE), proposed by [Bansak (2020)](https://projecteuclid.org/download/pdfview_1/euclid.ss/1591171230). A comprehensive tutorial on using this package [can be found here](https://github.com/kbansak/powerLATE_tutorial).
